--- a/stylesheet.css
+++ b/stylesheet.css
@@ -2,7 +2,13 @@
 
 .yes {
     text-align: center;
-    
-    
+    background-color: white;
 }
-    
+
+    .selector
+{
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+}
