--- a/stylesheet2.css
+++ b/stylesheet2.css
@@ -12,9 +12,8 @@
 }
 
 h1{
-    color: white; font-size:80px
-    height: 100
-
+    color: white;
+    font-size: 45px;s
 }
 
 body {background-image:
