--- a/stylesheet.css
+++ b/stylesheet.css
@@ -11,4 +11,8 @@
   top: 0;
   left: 0;
   width: 100%;
+  background-color:black;
+     border: 5px solid;
+     border-color:white;
+     height: 30;
 }
