--- a/stylesheet2.css
+++ b/stylesheet2.css
@@ -28,6 +28,9 @@ url("https://lh3.googleusercontent.com/-4Uyt52SZY10/WV6O-0zgc4I/AAAAAAAABjs/dr7c
       p{
           font-size: 18;
       }  
+      pg{
+          color: white;
+      }
      
      
      
